<resources>

    <string name="app_name">Reborn - Mis notas </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Presta+</string>
    <string name="nav_header_subtitle">Tu diario de prestamos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_registro">Registrar Prestamos</string>
    <string name="menu_settings">Settings</string>
    <string name="facebook_app_id">766864588037580</string>
    <string name="fb_login_protocol_scheme">fb766864588037580</string>
    <string name="facebook_client_token">ea5926fd0255e51efb1ba211549ac58a</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="entrar">Entrar</string>
    <string name="derechos_reservados_kreative_media_group">Derechos Reservados - Bryan Marc 1-19-0040 ®</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="has_olvidado_tus_datos_de_inicio_de_sesi_n">¿Has olvidado tus datos de inicio de sesión?</string>
    <string name="obt_n_ayuda">Obtén ayuda.</string>
    <string name="reborn">Reborn</string>
    <string name="espa_ol_espa_a">español(España)</string>
    <string name="a_n_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="reg_strate">Regístrate.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="opciones_extras">Opciones extras</string>
    <string name="reporte_de_gastos">Reporte de gastos</string>
    <string name="seguridad_y_cambios">Seguridad y Cambios</string>
    <string name="reclamos">Reclamos</string>
    <string name="membresias">Membresias</string>
    <string name="metodos_de_pago">Metodos de pago</string>
    <string name="id_de_cuenta">ID de cuenta:</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="imgb3">imgb3</string>
    <string name="imgv">imgv</string>
    <string name="imgb2">imgb2</string>
    <string name="imgb1">imgb1</string>
    <string name="imgb4">imgb4</string>
    <string name="imgb6">imgb6</string>
    <string name="elige_tu_servicio">Elige tu servicio</string>
    <string name="electricista">Electricista</string>
    <string name="ebanista">Ebanista</string>
    <string name="plomero">Plomero</string>
    <string name="pintor">Pintor</string>
    <string name="mecanico">Mecanico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navt">navt</string>
    <string name="title_home">Perfil</string>
    <string name="title_dashboard">Inicio</string>
    <string name="title_notifications">Servicios</string>
    <string name="title_activity_inicio">Inicio</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_pendientes">Ver pagos pendientes</string>
    <string name="registro_de_prestamo">Registro de Prestamo</string>
    <string name="_0">$/0</string>
    <string name="monto_diario_a_pagar">Monto Diario a Pagar</string>
    <string name="prueba">Prueba</string>
    <string name="fab_add">fab_add</string>

</resources>