<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/reportbutton"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/recl"
        app:srcCompat="@android:drawable/ic_menu_agenda"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginTop="524dp"
        android:contentDescription="@string/imgb6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_dialer"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/reclamobutton"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/imgb3"
        app:layout_constraintEnd_toStartOf="@+id/seguridadbutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic2"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/seguridadbutton"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginTop="372dp"
        android:contentDescription="@string/imgb4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/pagobutton"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginTop="228dp"
        android:contentDescription="@string/imgb1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic1"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/vipbutton"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="67dp"
        android:contentDescription="@string/imgb2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagobutton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/meto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="91dp"
        android:text="@string/metodos_de_pago"
        app:layout_constraintEnd_toStartOf="@+id/mem"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:text="@string/membresias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="99dp"
        android:text="@string/reclamos"
        app:layout_constraintEnd_toStartOf="@+id/seg"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:text="@string/seguridad_y_cambios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/opciones_extras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="632dp"
        android:layout_marginEnd="92dp"
        android:text="@string/reporte_de_gastos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/aclonica"
        android:text="OPCIONES DE USUARIO"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>