<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#ECE9E9"
    tools:context=".Principalcontent">

    <TextView
        android:id="@+id/textViewR2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/elige_tu_servicio"
        android:textColor="@android:color/system_neutral1_600"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="s" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#F8F6F6"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mecanico"
        android:textAlignment="center"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewR2"
        tools:targetApi="s" />

    <Button
        android:id="@+id/button7"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#ECECEC"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ebanista"
        android:textAlignment="center"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#ECECEC"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pintor"
        android:textAlignment="center"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:targetApi="s" />

    <Button
        android:id="@+id/button6"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#ECECEC"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plomero"
        android:textAlignment="center"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#ECECEC"
        android:fontFamily="sans-serif-medium"
        android:text="@string/electricista"
        android:textAlignment="center"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

</androidx.constraintlayout.widget.ConstraintLayout>