<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/copyright2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/derechos_reservados_kreative_media_group"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="316dp"
        android:layout_height="74dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/botonredondo3"
        android:backgroundTint="#737070"
        android:onClick="iniciarsesion"
        android:text="@string/entrar"
        android:textColor="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/email"
        android:layout_width="316dp"
        android:layout_height="52dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/botonredondo"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="316dp"
        android:layout_height="52dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/botonredondo"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:autofillHints="password"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:shadowColor="#000000"
        android:text="@string/has_olvidado_tus_datos_de_inicio_de_sesi_n"
        android:textColor="#F8F6F6"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/obt_n_ayuda"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forget"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/reborn"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idiomav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="46dp"
        android:text="@string/espa_ol_espa_a"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="46dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:text="@string/a_n_no_tienes_una_cuenta"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="51dp"
        android:minHeight="48dp"
        android:onClick="registrarse"
        android:text="@string/reg_strate"
        android:textColor="@color/teal_200"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>